testsuites/LLT/compiler/Diagnose/lex_test/lex_unexpected_decimal_point/case2.expect.out
error: unexpected digit '2' in binary
  ==> case2.cj:14:13:
   | 
14 |     var a = 0b12.34p12
   |             ~~ ^ unexpected digit
   |             |
   |             because of this binary prefix
   | 
   # note: binary may only contain digit within 0~1

error: unexpected decimal point '.' in octal base number
  ==> case2.cj:15:14:
   | 
15 |     var b = 0o12.34p12
   |             ~~  ^ unexpected decimal point
   |             |
   |             because of this octal prefix
   | 
   # note: only decimal or hexadecimal number can support fractional part
help: if you expect a decimal fraction, could remove the prefix:
   | 
15 |     var b =  12.34p12
   |             ~ 
   | 
help: if you expect a hexadecimal fraction, could use hexadecimal prefix:
   | 
15 |     var b = 0x12.34p12
   |             ~~ 
   | 

2 errors generated, 2 errors printed.
